--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
 <body>
     <h1>test</h1>
+    <p>paragraph</p>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular.js"></script>
 </body>
 
