--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h1>test</h1>
     <p>paragraph</p>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular.js"></script>
+    <script src="js/test.js"></script>
 </body>
 
 </html>
