--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,45 @@
-<!doctype html>
+    <!doctype html>
 
-<html lang="en">
+<html lang="en" data-ng-app="store">
 
 <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/style.css">
+    <script src="../node_modules/angular/angular.min.js"></script>
+    <!--    <script src="../node_modules/angular-ui-bootstrap/index.js"></script>-->
+    <script src="js/app.js"></script>
 </head>
 
-<body>
-    <h1>test</h1>
-    <p>paragraph</p>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular.js"></script>
-    <script src="js/test.js"></script>
+<body ng-controller="StoreController as store">
+    <div class="container" ng-controller="PanelController as panel">
+        <div class="row">
+            <div class="col-sm-12">
+                <ul class="nav nav-pills">
+                    <li ng-class="{active: panel.isSelected(1)}">
+                        <a href ng-click="panel.selectTab(1)">Description</a>
+                    </li>
+                    <li ng-class="{active: panel.isSelected(2)}">
+                        <a href ng-click="panel.selectTab(2)">Specifications</a>
+                    </li>
+                    <li ng-class="{active: panel.isSelected(3)}">
+                        <a href ng-click="panel.selectTab(3)">Reviews</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="row">
+            <description-tab class="panel" ng-show="panel.isSelected(1)">
+            </description-tab>
+            <div class="panel" ng-show="panel.isSelected(2)">
+                <div class="col-sm-12">
+                    <h1>test1</h1>
+                </div>
+            </div>
+            <review-tab class="panel" ng-show="panel.isSelected(3)" ng-controller="ReviewController as reviewCtrl">
+            </review-tab>
+        </div>
+    </div>
 </body>
 
 </html>
