--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-    <!doctype html>
+<!doctype html>
 
 <html lang="en" data-ng-app="store">
 
@@ -7,17 +7,18 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
     <script src="../node_modules/angular/angular.min.js"></script>
-    <!--    <script src="../node_modules/angular-ui-bootstrap/index.js"></script>-->
     <script src="js/app.js"></script>
+    <script src="js/products.js"></script>
+    <script src="js/reviews.js"></script>
 </head>
 
 <body ng-controller="StoreController as store">
-    <div class="container" ng-controller="PanelController as panel">
+    <section class="container" ng-controller="PanelController as panel">
         <div class="row">
             <div class="col-sm-12">
-                <ul class="nav nav-pills">
+                <ul class="nav nav-tabs">
                     <li ng-class="{active: panel.isSelected(1)}">
-                        <a href ng-click="panel.selectTab(1)">Description</a>
+                        <a href ng-click="panel.selectTab(1)">Products</a>
                     </li>
                     <li ng-class="{active: panel.isSelected(2)}">
                         <a href ng-click="panel.selectTab(2)">Specifications</a>
@@ -29,17 +30,15 @@
             </div>
         </div>
         <div class="row">
-            <description-tab class="panel" ng-show="panel.isSelected(1)">
-            </description-tab>
+            <product-tab class="panel" ng-show="panel.isSelected(1)"></product-tab>
             <div class="panel" ng-show="panel.isSelected(2)">
                 <div class="col-sm-12">
                     <h1>test1</h1>
                 </div>
             </div>
-            <review-tab class="panel" ng-show="panel.isSelected(3)" ng-controller="ReviewController as reviewCtrl">
-            </review-tab>
+            <review-tab class="panel" ng-show="panel.isSelected(3)"></review-tab>
         </div>
-    </div>
+    </section>
 </body>
 
 </html>
